--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-POSTGRES_HOST=localhost
+POSTGRES_HOST=kpd-db
 POSTGRES_PORT=5432
-POSTGRES_DB=kpd
+POSTGRES_DB=nest_project
 POSTGRES_USER=student
 POSTGRES_PASSWORD=student
-POSTGRES_PGDATA=/data/postgres
+PGDATA=/data/postgres
