--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     networks:
       - internal
 
-  postgres:
+  kpd-db:
     container_name: postgres
     image: postgres:alpine
     env_file: .env
