--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,14 +1,14 @@
-FROM node:20-alpine AS builder
+FROM node:16-alpine AS builder
 WORKDIR /app
 COPY package*.json ./
 RUN npm ci
 COPY . ./
 RUN npm run build
 
-FROM node:20-alpine AS production
+FROM node:16-alpine AS production
 WORKDIR /app
-COPY package*.json ./
-RUN npm ci --omit=dev --no-audit --no-fund \
+COPY --from=builder /app/package*.json ./
+RUN npm ci --omit=dev \
     && npm i -g pm2
 COPY --from=builder /app/dist ./dist
 COPY ./ecosystem.config.js ./
