--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -7,8 +7,8 @@ RUN npm run build
 
 FROM node:16-alpine AS production
 WORKDIR /app
-COPY --from=builder /app/package*.json ./
-RUN npm ci --omit=dev \
+COPY package*.json ./
+RUN npm ci --omit=dev --no-audit --no-fund \
     && npm i -g pm2
 COPY --from=builder /app/dist ./dist
 COPY ./ecosystem.config.js ./
